Fix alignement calendrier

--- a/app/Resources/assets/sass/calendar.scss
+++ b/app/Resources/assets/sass/calendar.scss
@@ -260,7 +260,7 @@
     text-transform: uppercase;
     th {
       position: relative;
-      padding: 10px 15px;
+      padding: 0 15px 10px;
       text-align: left;
       border-bottom: 1px #575432 solid;
       &.dates {
